reflectapi-demo/tests/errors/input_skip_field_without_default.rs
#[derive(serde::Deserialize, reflectapi::Input)]
struct MyStruct {
    #[reflectapi(input_skip)]
    field: u32,
}

fn main() {}
